@@ -52,6 +52,7 @@ module Fairy
 ##CONF.LOG_FILE = "/tmp/fairy/log"
 ##CONF.LOG_FLUSH_INTERVAL = 1
 ##CONF.LOG_LEVEL = :DEBUG
+CONF.LOG_IMPORT_NTIMES_POP = 5000
 ##CONF.LOG_IMPORT_NTIMES_POP = 1000
 
 ##CONF.USE_RESOLV_REPLACE = false
