@@ -1,3 +1,7 @@
+Fri Apr 17 17:21:29 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* n-group-by.rb, port.rb: [BUG#49]用デバッグコード追加
+
 Wed Apr 15 18:13:15 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* fairy.rb, bfile.rb, controller.rb, exceptions.rb: [REQ: #81]対応. 
